# GameGrub

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BACKLOG_CREATION_COMPLETE.md  CODE_QUALITY_PLAN.md  CONTRIBUTING.md  LICENSE  README.md  REORGANIZATION_PLAN.md  THIRD_PARTY_NOTICES  build.gradle.kts  gradle.properties  manifest.json  settings.gradle.kts  skills-lock.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: app-release-signed.yml  issues-contributors-only.yml  pluvia-pr-check.yml  tagged-release.yml
.run/: Pluvia [formatKotlin].run.xml
PrivacyPolicy/: README.md
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/release-signed/: output-metadata.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/extras/: CMakeLists.txt  evshim.c  gpu_image.c  vulkan.c
app/src/main/cpp/patchelf/: CMakeLists.txt
app/src/main/cpp/patchelf/src/: elf.h  patchelf.cc  patchelf.h
app/src/main/cpp/proot/src/execve/: elf.c  enter.c  exit.c
app/src/main/cpp/proot/src/path/: binding.c  temp.c
app/src/main/cpp/virglrenderer/server/: virgl_server_renderer.c  virgl_server_shm.c
app/src/main/cpp/winlator/: alsa_client.c  arraytools.c  drawable.c  gpu_helper.c  gpu_image.c  patchelf_wrapper.cpp  sysvshared_memory.c  wine_registry_editor.c  xconnector_epoll.c
build-scripts/android/: build-libltdl.sh  (+4 more)
docs/: android-16kb-page-size-audit-2026-04-10.md  android-manifest-audit.md  architecture-assessment-2026-04-09.md  cache-controller-design.md  container-store-schema.md  downloadservice-initialization-fix-2026-04-09.md  egl-hwui-capability-probe-2026-04-10.md  gamemanagerdialog-crash-fix-2026-04-09.md  gamemanagerdialog-reinstall-fix-2026-04-09.md  launch-failure-taxonomy.md  magic-literals-audit-2026-04-04.md  mutation-points-audit.md  process-improvement-log.md  runtime-architecture-overview.md  runtime-exit-contract.md  runtime-launch-flow-current-state.md  runtime-store-directory-schema.md  serverlistpath-readonly-fix-2026-04-09.md  shovel-knight-audio-and-exit-analysis-2026-04-09.md  steam-download-analysis-index.md  steam-download-flow-audit-2026-04-09.md  steam-download-issues-critical.md  steam-download-test-scenarios.md  steam-service-decomposition-plan.md  steam-service-ownership-matrix.md  test-gap-matrix.md  utils-ownership-audit-2026-04-03.md  x11-xorg-opcode-audit-2026-04-09-v2.md  x11-xorg-opcode-audit-2026-04-09.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
keyvalues/: Baba Is You.txt  Factorio.txt  Hades.txt  Little Kitty Big City.txt  Messenger.txt  Noita.txt  Pathway.txt  Sea of Stars.txt  Tetris Effect.txt  Wargroove.txt
scripts/: verify-16kb-page-size.sh
skills/: rxjava-to-coroutines-migration
todo/: ARCH-001.md  ARCH-001a.md  ARCH-001b.md  ARCH-001c.md  ARCH-002.md  ARCH-002a.md  ARCH-002b.md  ARCH-002c.md  ARCH-002d.md  ARCH-003.md  ARCH-003a.md  ARCH-003b.md  ARCH-003c.md  ARCH-003d.md  ARCH-003e.md  ARCH-004.md  ARCH-004a.md  ARCH-004b.md  ARCH-004c.md  ARCH-004d.md  ARCH-005.md  ARCH-005a.md  ARCH-005b.md  ARCH-005c.md  ARCH-005d.md  ARCH-005e.md  ARCH-006.md  ARCH-006a.md  ARCH-006b.md  ARCH-006c.md  ARCH-006d.md  ARCH-006e.md  ARCH-007.md  ARCH-007a.md  ARCH-007b.md  ARCH-007c.md  ARCH-007d.md  ARCH-008.md  ARCH-009.md  ARCH-010.md  (+408 more)
ubuntufs/: build.gradle.kts
(+1277 files in other folders)
